--- a/package.xml
+++ b/package.xml
@@ -15,7 +15,9 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>roseus</build_depend>
+  <build_depend>pr2eus</build_depend>
 
   <run_depend>roseus</run_depend>
+  <run_depend>pr2eus</run_depend>
 
 </package>
