--- a/package.xml
+++ b/package.xml
@@ -16,8 +16,19 @@
 
   <build_depend>roseus</build_depend>
   <build_depend>pr2eus</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>dynamixel_sdk</build_depend>
+  <build_depend>robotis_framework_common</build_depend>
+  <build_depend>robotis_device</build_depend>
+  <build_depend>robotis_controller</build_depend>
+  <build_depend>robotis_math</build_depend>
 
   <run_depend>roseus</run_depend>
   <run_depend>pr2eus</run_depend>
-
+  <run_depend>roscpp</run_depend>
+  <run_depend>dynamixel_sdk</run_depend>
+  <run_depend>robotis_framework_common</run_depend>
+  <run_depend>robotis_device</run_depend>
+  <run_depend>robotis_controller</run_depend>
+  <run_depend>robotis_math</run_depend>
 </package>
